# dropt-cli

./: .gitignore  .gitmodules  AUTHORS.rst  CHANGES.rst  LICENSE  README.md  dropt_client.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py
data/titanic/: README.md
docs/: _config.yml  about.md  changelog.md  doc.html  doc.md  download.md  index.html  index.md  install.md  installation.md  quick_start.md  requirements.txt
docs/_data/: header.yml  navigation.yml
docs/_docs/: config_file.md  search_space.md  tuners.md
docs/_includes/: header.html  navigation.html
docs/_layouts/: default.html
docs/_sass/: header.sass  main.sass  main.scss
docs/source/: changes.rst  conf.py  index.rst  license.rst
dropt/: __init__.py  endpoint.py  exception.py  interface.py  requestor.py  resource.py
examples/configs/: README.md  TUNER_AND_SEARCH_SPACE.md  anneal.json  batch.json  evo.json  gp.json  grid.json  hyperband.json  metis.json  morphism.json  nested_search_space.json  prune.json  random.json  smac.json  tpe.json
examples/func-eggholder/: config.json  dropt_client.py  eggholder.py
examples/func-rosenbrock/: config.json  dropt_client.py  droptctl.py  rosenbrock.py
examples/imagenet-pytorch/: README.md  imagenet.py
examples/mnist-pytorch/: config.json  dropt_client.py  mnist.py
examples/test_functions/: func_eggholder.py  func_rosenbrock.py
examples/titanic-xgboost/: README.md  config.json  dropt_client.py  main.py  requirements.txt  titanic_xgb.py  train.py  xgb.py
examples/trials/: README.md
tools/: droptctl.py
(+52 files in other folders)
