[metadata]
name = dropt-cli
description = Library of DrOpt client
url = https://github.com/GoEdge-ai/dropt-cli
author = Chiayu Sun
author_email = chiayusun.cs08g@nctu.edu.tw
license = MIT
keywords = hyper-parameter, client, tuning
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules


[options]
setup_requires =
    setuptools >=42.0.0
    setuptools_scm >=3.4.0
    wheel >=0.33.0
install_requires =
    setuptools >=42.0.0
    requests >=2.22.0
    questionary >= 1.5.2
    dropt-util >=0.2
python_requires = >=3.6
package_dir =
    =src
packages = find_namespace:


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    droptctl = dropt.cmd.controller:start
